# avalanche-ai-agent

./: .gitignore  .replit  Pasted-Create-an-autonomous-AI-agent-that-controls-a-wallet-on-the-Avalanche-network-routinely-checks-chai-1732630310467.txt  README.md  app.py  base_models.py  chain_scanner.py  contract_manager.py  create_wallet.py  decision_engine.py  initialize_chains.py  initialize_risk_params.py  key_generator.py  main.py  memory_manager.py  models.py  pyproject.toml  replit.nix  transaction_executor.py  wallet_manager.py
static/css/: custom.css
static/js/: dashboard.js
templates/: contracts.html  index.html  risk_parameters.html  transactions.html
