[project]
name = "repl-nix-avalancheaiwalletagent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "apscheduler>=3.11.0",
    "cryptography>=43.0.3",
    "requests>=2.32.3",
    "web3>=7.6.0",
]
